--- a/citations.bib
+++ b/citations.bib
@@ -82,3 +82,16 @@
 	journal = {Census.gov},
 	author = {US Census Bureau,},
 }
+
+@misc{tolbert_key_2020,
+	title = {Key {Facts} about the {Uninsured} {Population}},
+	url = {https://www.kff.org/uninsured/issue-brief/key-facts-about-the-uninsured-population/},
+	abstract = {This issue brief describes trends in health coverage prior to the pandemic, examines the characteristics of the uninsured population in 2019, and summarizes the access and financial implications of…},
+	language = {en-US},
+	urldate = {2022-05-03},
+	journal = {KFF},
+	author = {Tolbert, Jennifer and Nov 06, Anthony Damico Published: and {2020}},
+	month = nov,
+	year = {2020},
+}
+
